external-crates/move/crates/move-analyzer/tests/parse-error/sources/M1.move
module ParseError::M1 {
    // this parsing error should not prevent M2 from building symbolication information
    parse_error
}
